added in warning text to proofread before submitting & updated summary index

--- a/app/views/v8/_summary.html
+++ b/app/views/v8/_summary.html
@@ -42,9 +42,9 @@
     </ul>
 
 <!-- ////EMPLOYER//// -->
-      <h4 class="govuk-heading-m govuk-!-margin-bottom-2">Employer 'view advert' journey</h4>                                              
+      <h4 class="govuk-heading-m govuk-!-margin-bottom-2">Employer</h4>                                              
       <div class="govuk-button-group">
-        <a href="v8/employer/login" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">View advert</a>
+        <a href="v8/employer/login" class="govuk-button" style="background: #6F72AF" data-module="govuk-button">View journey</a>
       </div>
 
       <table class='govuk-table'>                    
@@ -59,6 +59,18 @@
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v8/employer/view-advert/3b-manage-advert-closed">Close vacancy</a></td>
             <td class='govuk-table__cell'>
               <li>UPDATED content into banner once user has closed an advert</li>
+            </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/employer/create/check-your-answers">Check your answers</a></td>
+            <td class='govuk-table__cell'>
+              <li>ADDED warning content</li>
+            </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/employer/create/advert-preview">Preview your advert</a></td>
+            <td class='govuk-table__cell'>
+              <li>ADDED warning content</li>
             </td>
           </tr>
         </tbody>
@@ -84,6 +96,18 @@
             <td class='govuk-table__cell'>
               <li>UPDATED content into banner once user has closed a vacancy</li>
             </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/provider/create/check-your-answers">Check your answers</a></td>
+            <td class='govuk-table__cell'>
+              <li>ADDED warning content</li>
+            </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/provider/create/preview-vacancy">Preview your vacancy</a></td>
+            <td class='govuk-table__cell'>
+              <li>ADDED warning content</li>
+            </td>
           </tr>
         </tbody>
       </table>  
@@ -108,6 +132,18 @@
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v8/traineeships/view-vacancy/3b-manage-vacancy-closed">Close vacancy</a></td>
             <td class='govuk-table__cell'>
               <li>UPDATED content into banner once user has closed a vacancy</li>
+            </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/check-your-answers">Check your answers</a></td>
+            <td class='govuk-table__cell'>
+              <li>ADDED warning content</li>
+            </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/preview-vacancy">Preview your vacancy</a></td>
+            <td class='govuk-table__cell'>
+              <li>ADDED warning content</li>
             </td>
           </tr>
         </tbody>
