--- a/app/views/v8/employer/view-advert/0-dashboard.html
+++ b/app/views/v8/employer/view-advert/0-dashboard.html
@@ -232,7 +232,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
       </div>
 
       <div class="govuk-grid-column-one-third ">
-        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="#">Recruitment APIs</a></h3>
+        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="../api/api">Recruitment APIs</a></h3>
         <p class="govuk-body">Integrate our APIs to create adverts using your own systems and display adverts on your websites.</p>
       </div>
     </div>
