--- a/app/views/v8/provider/view-vacancy/0-dashboard.html
+++ b/app/views/v8/provider/view-vacancy/0-dashboard.html
@@ -208,23 +208,23 @@ Recruitment - {{serviceName}} - GOV.UK
     <div class="govuk-grid-row">
 
       <div class="govuk-grid-column-one-third ">
-        <h3 class="govuk-heading-s"><a class="govuk-link  govuk-link--no-visited-state" href="reports/dashboard">Reports</a></h3>
+        <h3 class="govuk-heading-s"><a class="govuk-link  govuk-link--no-visited-state" href="../reports/dashboard">Reports</a></h3>
         <p class="govuk-body">Create a report about applicants or vacancies</p>
       </div>
 
       <div class="govuk-grid-column-one-third ">
         <h3 class="govuk-heading-s">
           {% if data.has_notifications == "yes" %}
-          <a href="notifications/notification-preferences">Manage your recruitment emails</a>
+          <a href="../notifications/notification-preferences">Manage your recruitment emails</a>
           {% else %}
-          <a href="notifications/notification-preferences-new">Manage your recruitment emails</a>
+          <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a>
           {% endif%}
         </h3>
         <p class="govuk-body">Set up and manage the emails you're sent about your vacancies and applications</p>
       </div>
 
       <div class="govuk-grid-column-one-third ">
-        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="api/api">Recruitment APIs</a></h3>
+        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="../api/api">Recruitment APIs</a></h3>
         <p class="govuk-body">Integrate our API to create vacancies using your own systems and display vacancies on your websites</p>
       </div>
     </div>
