--- a/app/views/v8/traineeships/create/check-your-answers.html
+++ b/app/views/v8/traineeships/create/check-your-answers.html
@@ -318,7 +318,17 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
         <p class="govuk-body">By submitting this vacancy you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            Proofread your vacancy for spelling and formatting to avoid it being rejected by our QA team.
+          </strong>
+        </div>
+
         <p><a class="govuk-link" href="preview-vacancy">Preview vacancy before submitting</a></p>
+
+        <br>
 
         <form action="/form-handler" method="post" novalidate>
 
@@ -328,7 +338,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
             <a href="confirmation" class="govuk-button" data-module="govuk-button">Submit vacancy</a>
 
 
-            <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
+            <a href="../dashboard" class="govuk-link">Cancel</a>
           </div>
 
         </form>
