--- a/app/views/v8/employer/create/advert-preview.html
+++ b/app/views/v8/employer/create/advert-preview.html
@@ -13,7 +13,16 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
 <form action="" method="post">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h1 class="govuk-heading-l">Preview your advert</h1>
+      <h1 class="govuk-heading-xl">Preview your advert</h1>
+
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          Proofread your advert for spelling and formatting to avoid it being rejected by our QA team.
+        </strong>
+      </div>
+
     </div>
 
     <div class="govuk-grid-column-full govuk-!-margin-bottom-7">
