--- a/app/views/v8/employer/create/check-your-answers.html
+++ b/app/views/v8/employer/create/check-your-answers.html
@@ -375,7 +375,17 @@ Training provider
 
         <p class="govuk-body">By submitting this advert you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            Proofread your advert for spelling and formatting to avoid it being rejected by our QA team.
+          </strong>
+        </div>
+
         <p><a class="govuk-link" href="advert-preview">Preview advert before submitting</a></p>
+
+        <br>
 
         <form action="/form-handler" method="post" novalidate>
 
