--- a/app/views/v8/provider/create/check-your-answers.html
+++ b/app/views/v8/provider/create/check-your-answers.html
@@ -380,7 +380,17 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
 
         <p class="govuk-body">By submitting this vacancy you are confirming that, to the best of your knowledge, the details you are providing are correct.</p>
 
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            Proofread your vacancy for spelling and formatting to avoid it being rejected by our QA team.
+          </strong>
+        </div>
+
         <p><a class="govuk-link" href="preview-vacancy">Preview vacancy before submitting</a></p>
+        
+        <br>
 
         <form action="/form-handler" method="post" novalidate>
 
