--- a/app/views/v8/provider/create/preview-vacancy.html
+++ b/app/views/v8/provider/create/preview-vacancy.html
@@ -13,7 +13,16 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
 <form action="" method="post">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <h1 class="govuk-heading-l">Preview your vacancy</h1>
+      <h1 class="govuk-heading-xl">Preview your vacancy</h1>
+
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          Proofread your vacancy for spelling and formatting to avoid it being rejected by our QA team.
+        </strong>
+      </div>
+      
     </div>
 
     <div class="govuk-grid-column-full govuk-!-margin-bottom-7">
