--- a/app/views/v8/_summary.html
+++ b/app/views/v8/_summary.html
@@ -31,14 +31,14 @@
      
     <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Design tickets (in Trello)</h4> 
     <ul class="govuk-list govuk-list--bullet"> 
-      <!-- <li><a href="https://trello.com/c/Nsimx4WS/202-202-employer-dashboard-deep-links" class="govuk-link govuk-link--no-visited-state">#202 Employer Dashboard deep links</a></li>  
-      <li><a href="https://trello.com/c/eKqQSfuN/201-201-provider-dashboard-deep-links" class="govuk-link govuk-link--no-visited-state">#201 Provider Dashboard deep links</a></li>  
-      <li><a href="https://trello.com/c/wXuKlerw/213-213-traineeship-dashboard-view-vacancy-links" class="govuk-link govuk-link--no-visited-state">#213 Traineeship Dashboard View Vacancy links</a></li>   -->
+      <li><a href="https://trello.com/c/KvRHN8Rx/215-look-at-content-on-check-your-answers-and-or-forcing-users-to-preview-after-check-your-answers-before-vacancy-is-submitted" class="govuk-link govuk-link--no-visited-state">Content check to proofread before submitting</a></li>  
+      <li><a href="https://trello.com/c/YL63We2u/217-217-snaglist-for-traineeship" class="govuk-link govuk-link--no-visited-state">#217 Traineeship snaglist</a></li>  
+      <!-- <li><a href="https://trello.com/c/wXuKlerw/213-213-traineeship-dashboard-view-vacancy-links" class="govuk-link govuk-link--no-visited-state">#213 Traineeship Dashboard View Vacancy links</a></li>   -->
     </ul>
 
     <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Journey flow</h4>  
     <ul class="govuk-list govuk-list--bullet">                           
-      <!-- <li><a href="https://lucid.app/lucidspark/75df8cd3-1247-466f-b7c6-7980cf119bf5/edit?existing=1&docId=75df8cd3-1247-466f-b7c6-7980cf119bf5&shared=true&invitationId=inv_295930d0-a2eb-4b25-a72a-e25f0aea5c39#" class="govuk-link govuk-link--no-visited-state">Lucid board</a></li> -->
+      <li><a href="https://lucid.app/lucidspark/75df8cd3-1247-466f-b7c6-7980cf119bf5/edit?viewport_loc=-329627%2C-454711%2C24730%2C12689%2C0_0&invitationId=inv_295930d0-a2eb-4b25-a72a-e25f0aea5c39#" class="govuk-link govuk-link--no-visited-state">Lucid board</a></li>
     </ul>
 
 <!-- ////EMPLOYER//// -->
@@ -51,7 +51,7 @@
         <thead class='govuk-table__head'>
           <tr class='govuk-table__row'>
             <th scope='col' class='govuk-table__header'>Page</th>
-            <th scope='col' class='govuk-table__header'>What</th>
+            <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
           </tr>
         </thead>
         <tbody class='govuk-table__body'>
@@ -64,30 +64,30 @@
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/employer/create/check-your-answers">Check your answers</a></td>
             <td class='govuk-table__cell'>
-              <li>ADDED warning content</li>
+              <li>ADDED warning content to proofread</li>
             </td>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/employer/create/advert-preview">Preview your advert</a></td>
             <td class='govuk-table__cell'>
-              <li>ADDED warning content</li>
+              <li>ADDED warning content to proofread</li>
             </td>
           </tr>
         </tbody>
       </table>  
 
 <!-- //// PROVIDER//// -->
-      <h4 class="govuk-heading-m govuk-!-margin-bottom-2">Provider journey</h4>
+      <h4 class="govuk-heading-m govuk-!-margin-bottom-2">Provider</h4>
 
       <div class="govuk-button-group">
-        <a href="v8/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">View vacancy</a> 
+        <a href="v8/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">View journey</a> 
       </div>
 
       <table class='govuk-table'>                    
         <thead class='govuk-table__head'>
           <tr class='govuk-table__row'>
             <th scope='col' class='govuk-table__header'>Page</th>
-            <th scope='col' class='govuk-table__header'>What</th>
+            <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
           </tr>
         </thead>
         <tbody class='govuk-table__body'>
@@ -100,13 +100,13 @@
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/provider/create/check-your-answers">Check your answers</a></td>
             <td class='govuk-table__cell'>
-              <li>ADDED warning content</li>
+              <li>ADDED warning content to proofread</li>
             </td>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/provider/create/preview-vacancy">Preview your vacancy</a></td>
             <td class='govuk-table__cell'>
-              <li>ADDED warning content</li>
+              <li>ADDED warning content to proofread</li>
             </td>
           </tr>
         </tbody>
@@ -114,17 +114,17 @@
 
 
 <!-- ////TRAINEESHIP -->
-      <h4 class="govuk-heading-m govuk-!-margin-bottom-2">Traineeship journey</h4>  
+      <h4 class="govuk-heading-m govuk-!-margin-bottom-2">Traineeship</h4>  
 
       <div class="govuk-button-group">
-        <a href="v8/provider/login" class="govuk-button" style="background: #417F82" data-module="govuk-button">View vacancy</a>
+        <a href="v8/provider/login" class="govuk-button" style="background: #417F82" data-module="govuk-button">View journey</a>
       </div>
 
       <table class='govuk-table'>                    
         <thead class='govuk-table__head'>
           <tr class='govuk-table__row'>
             <th scope='col' class='govuk-table__header'>Page</th>
-            <th scope='col' class='govuk-table__header'>What</th>
+            <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
           </tr>
         </thead>
         <tbody class='govuk-table__body'>
@@ -137,13 +137,13 @@
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/check-your-answers">Check your answers</a></td>
             <td class='govuk-table__cell'>
-              <li>ADDED warning content</li>
+              <li>ADDED warning content to proofread</li>
             </td>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/preview-vacancy">Preview your vacancy</a></td>
             <td class='govuk-table__cell'>
-              <li>ADDED warning content</li>
+              <li>ADDED warning content to proofread</li>
             </td>
           </tr>
         </tbody>
