traineeship duration and working hours page updated

--- a/app/views/v8/_summary.html
+++ b/app/views/v8/_summary.html
@@ -138,12 +138,21 @@
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/check-your-answers">Check your answers</a></td>
             <td class='govuk-table__cell'>
               <li>ADDED warning content to proofread</li>
+              <li>REMOVED hours per week question</li>
+              <li>CHANGED 'working week details' label</li>
             </td>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
             <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/preview-vacancy">Preview your vacancy</a></td>
             <td class='govuk-table__cell'>
               <li>ADDED warning content to proofread</li>
+            </td>
+            <tbody class='govuk-table__body'>
+              <tr class='govuk-table__row'>
+            <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="v8/traineeships/create/duration">Duration and working hours</a></td>
+            <td class='govuk-table__cell'>
+              <li>REMOVED third question on the page 'How many hours will the trainee be on placement in total?' </li>
+              <li>CHANGED the title and guidance text of the open text field box </li>
             </td>
           </tr>
         </tbody>
