--- a/app/views/v8/traineeships/create/check-your-answers.html
+++ b/app/views/v8/traineeships/create/check-your-answers.html
@@ -133,20 +133,14 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
               Duration
               <br>
               <br>
-              Working week details
-              <br>
-              <br>
-              Hours per week
+              Weekly hours
+
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected months or years]]
               <br>
               <br>
               [[your description]]
-              <br>
-              <br>
-              <br>
-              [[selected number]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
