disability scheme link content updated to say opens in new tab

--- a/app/views/v8/employer/create/about-employer.html
+++ b/app/views/v8/employer/create/about-employer.html
@@ -53,7 +53,7 @@ Employer information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
               <label class="govuk-label govuk-checkboxes__label" for="is-disability-confident">
                 This employer has signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
                   target="_blank" title="Disability Confident employer scheme and guidance (opens in a new window)">Disability
-                  Confident</a> scheme
+                  Confident scheme (opens in new tab)</a>.
               </label>
             </div>
           </div>
