--- a/app/views/v8/provider/create/about-employer.html
+++ b/app/views/v8/provider/create/about-employer.html
@@ -52,7 +52,7 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
                   <label class="govuk-label govuk-checkboxes__label" for="is-disability-confident">
                      This employer has signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
                       target="_blank" title="Disability Confident employer scheme and guidance (opens in a new window)">Disability
-                      Confident scheme</a>.
+                      Confident scheme (opens in new tab)</a>.
                   </label>
                 </div>
               </div>
