--- a/app/views/v8/traineeships/create/about-employer.html
+++ b/app/views/v8/traineeships/create/about-employer.html
@@ -43,7 +43,7 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" aria-describedby="nationality-hint">
               <legend class="govuk-label govuk-!-font-weight-bold" for="shortDescription">
-                Disability Confident employer (optional)
+                Disability Confident employersdfsf (optional)
               </legend>
 
               <div class="govuk-checkboxes">
@@ -53,7 +53,7 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
                   <label class="govuk-label govuk-checkboxes__label" for="is-disability-confident">
                      This employer has signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
                       target="_blank" title="Disability Confident employer scheme and guidance (opens in a new window)">Disability
-                      Confident scheme</a>.
+                      Confident scheme (opens in new tab)</a>.
                   </label>
                 </div>
               </div>
