traineeship edit vancancy dates updated

--- a/app/views/v9/_summary.html
+++ b/app/views/v9/_summary.html
@@ -22,8 +22,8 @@
         </thead>
         <tbody class='govuk-table__body'>
           <tr class='govuk-table__row'>
-            <td class='govuk-table__cell'>Working through final updates to RAA</td>
-            <td class='govuk-table__cell'></td>
+            <td class='govuk-table__cell'>Working through updates to RAA</td>
+            <td class='govuk-table__cell'>RAA improvements</td>
           </tr>
         </tbody>
       </table>"
