--- a/app/views/v9/traineeships/view-vacancy/3b-manage-vacancy-edited.html
+++ b/app/views/v9/traineeships/view-vacancy/3b-manage-vacancy-edited.html
@@ -1,3 +1,6 @@
+
+
+
 {% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
@@ -11,19 +14,31 @@ Manage vacancy
 {% endblock %}
 
 {% block content %}
+
+<style>
+  .govuk-notification-banner__content > * {
+    box-sizing: border-box;
+   max-width: 100%; }
+</style>
+
+
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    {% if data['dates-changed'] === 'yes' %}
-    <div class="govuk-info-basic ">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-          <!-- <span class="govuk-!-font-weight-bold">Activity</span> -->
-          <p class="govuk-body">You can now clone from the any vacancy management page. From your vacancies dashabord search for a vacancy and click manage.</p>
-          <p class="govuk-body govuk-!-margin-bottom-0"><a href="?alert=none" class="govuk-link--no-visited-state">Dismiss this notification</a></p>
-        </div>
+
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Success
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          The vacancy dates for “test apprenticeship” have been updated.        </h3>
       </div>
     </div>
-    {% endif %}
+
+
     <h1 class="govuk-heading-xl">Manage vacancy</h1>
 
 
@@ -89,7 +104,7 @@ Manage vacancy
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
           <a class="govuk-link button-link  govuk-link--no-visited-state" href="3c-dates">Edit vacancy dates</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="../account/close">Close vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Delete vacancy</a> 
         </p>
       </div>
     </div>
