--- a/app/views/v9/_summary.html
+++ b/app/views/v9/_summary.html
@@ -65,16 +65,16 @@
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-closed">Manage livey vacancy</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3c-dates">Edit advert dates</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the 'Edit vacancy' link content</li>
                   <li>CHANGED the journey to edit dates</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-closed">Edit vacancy dates</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-edited">Manage advert</a></td>
                 <td class='govuk-table__cell'>
-                  <li>ADDEDD success notification banner</li>
+                  <li>CHANGED to GDS style success notification banner</li>
+                  <li>CHANGED 'Edit advert' link to 'Edit advert dates'</li>
                 </td>
               </tr>
             </tbody>
@@ -108,16 +108,16 @@
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-closed">Manage livey vacancy</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/view-vacancy/3c-dates">Edit vacancy dates</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the 'Edit vacancy' link content</li>
                   <li>CHANGED the journey to edit dates</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-closed">Edit vacancy dates</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
                 <td class='govuk-table__cell'>
-                  <li>ADDEDD success notification banner</li>
+                  <li>CHANGED to GDS style success notification banner</li>
+                  <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates'</li>
                 </td>
               </tr>
             </tbody>
@@ -149,22 +149,23 @@
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-closed">Manage livey vacancy</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3c-dates">Edit vacancy dates</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the 'Edit vacancy' link content</li>
                   <li>CHANGED the journey to edit dates</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-closed">Edit vacancy dates</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
                 <td class='govuk-table__cell'>
-                  <li>ADDEDD success notification banner</li>
+                  <li>CHANGED to GDS style success notification banner</li>
+                  <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates'</li>
                 </td>
               </tr>
             </tbody>
           </table> 
         </div>
-      </details>                                           
+      </details>
+                                     
 
 
 
