--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -132,7 +132,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            My employer is not listed
+            The organisation I want to select is not listed
           </span>
         </summary>
         <div class="govuk-details__text">
