--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -136,7 +136,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           </span>
         </summary>
         <div class="govuk-details__text">
-          Your employer is not listed because you do not have the permission to create a vacancy for them. You'll need to contact them to set this permission. 
+          Your organisation is not listed because you do not have the permission to create a vacancy for them. You'll need to contact them to set this permission. 
         </div>
       </details>
 
