--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
     {% include './v9/_summary.html' %}
                 
     <h2 class="govuk-heading-l govuk-!-margin-top-9">
-      Previous sprints and archive
+      Previous sprints archive
     </h2>
 
     {% set v8Html %}
