--- a/app/views/v9/_summary.html
+++ b/app/views/v9/_summary.html
@@ -67,14 +67,14 @@
               <tr class='govuk-table__row'>
                 <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3c-dates">Edit advert dates</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the journey to edit dates</li>
+                  <li>CHANGED the journey to edit dates - live advert</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
                 <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-edited">Manage advert</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED to GDS style success notification banner</li>
-                  <li>CHANGED 'Edit advert' link to 'Edit advert dates'</li>
+                  <li>CHANGED to GDS style success notification banner - live advert</li>
+                  <li>CHANGED 'Edit advert' link to 'Edit advert dates' - liver advert</li>
                 </td>
               </tr>
             </tbody>
@@ -110,14 +110,27 @@
               <tr class='govuk-table__row'>
                 <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/view-vacancy/3c-dates">Edit vacancy dates</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the journey to edit dates</li>
+                  <li>CHANGED the journey to edit dates - live vacancy</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
                 <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED to GDS style success notification banner</li>
-                  <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates'</li>
+                  <li>CHANGED to GDS style success notification banner - live vacancy</li>
+                  <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates' - live vacancy</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/create/employers-select">Choose vacancy organisation</a>
+                <br><br> <a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/create/employers-select-0">Choose vacancy organisation - 0 search results</a></td>
+                <td class='govuk-table__cell'>
+                  <li>CHANGED the page to align with other parts of selecting employer across the service - choose organisation</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/create/employers-confirm">Confirm organisation</a></td>
+                <td class='govuk-table__cell'>
+                  <li>ADDED new page to confirm organisation</li>
                 </td>
               </tr>
             </tbody>
@@ -149,16 +162,29 @@
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3c-dates">Edit vacancy dates</a></td>
+                <td class='govuk-table__cell'>Live vacancy - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3c-dates">Edit vacancy dates</a></td>
                 <td class='govuk-table__cell'>
                   <li>CHANGED the journey to edit dates</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
+                <td class='govuk-table__cell'>Live vacancy - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
                 <td class='govuk-table__cell'>
                   <li>CHANGED to GDS style success notification banner</li>
                   <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates'</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/create/employers-select">Choose vacancy organisation</a>
+                <br><br> <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/create/employers-select-0">Choose vacancy organisation - 0 search results</a></td>
+                <td class='govuk-table__cell'>
+                  <li>CHANGED the page to align with other parts of selecting employer across the service - choose organisation</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/traineeships/create/employers-confirm">Confirm organisation</a></td>
+                <td class='govuk-table__cell'>
+                  <li>ADDED new page to confirm organisation</li>
                 </td>
               </tr>
             </tbody>
