--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -12,33 +12,31 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if query.error == "yes" %}
-    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
-      <h2 class="govuk-error-summary__title" id="error-summary-title">
-        Please fix these errors
-      </h2>
-      <div class="govuk-error-summary__body">
-        <ul class="govuk-list govuk-error-summary__list">
-          <li>
-            <a href="#dob-error">You must select an employer</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    {% endif %}
-    <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span> -->
+   
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Which organisation do you want to create a vacancy for?</h1>
-    <form method="post" id="employers-form" action="">
-    <!--<form method="post" id="employers-form" action="create-vacancy">-->
-      {% if data.employerAmount > 10 %}
+
+    <form method="post" action="employers-select-0">
+
+      <details class="govuk-details" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            The organisation I want to select is not listed
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          The organisation is not listed because you do not have permission to create a vacancy for them. <br><br>
+          You'll need to contact them to give you permission in the 'training provider permissions’ section of their Apprenticeship service account. 
+        </div>
+      </details>
+      
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-visually-hidden">Search your employers</legend>
-        <div class="govuk-form-group search-field search-field-darker govuk-input--width-30">
+        <legend class="govuk-visually-hidden">Search organisation name or account name</legend>
+        <div class="govuk-form-group search-field search-field-darker">
 
           <div class="search-input search-input-with-button">
             <label class="govuk-label" for="query">
               <!--Client reference-->
-              Search your employers
+              Search organisation name or account name
             </label>
 
             <div class="autocomplete__parent_wrapper">
@@ -56,96 +54,58 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
             <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
           </div>
         </div>
-        <p class="" data-clear-filter="" aria-hidden="false"><a id="clearSearch" href="#">Clear search</a></p>
       </fieldset>
-      {% endif %}
-      <div id="oranisation-list" class="govuk-form-group {% if query.error == "yes" %}govuk-form-group--error{%endif%}">
-        <fieldset class="govuk-fieldset">
-          {% if query.error == 'yes' %}
-          <span id="employer-error" class="govuk-error-message">You must select and employer</span>
-          {% endif %}
-          <div class="govuk-radios">
-            {% for employer in data.employers %}
-            {% if loop.index < 10 %}
-            <div class="govuk-radios__item selection-item" data-item-id="{{loop.index+1}}">
-              <input class="govuk-radios__input" id="selected-organisation-id-{{loop.index+1}}" name="selected_organisation_id" type="radio" value="{{employer.businessName}}" data-search-value="Organisation {{loop.index+1}}">
-              <label class="govuk-label govuk-radios__label" for="selected-organisation-id-{{loop.index+1}}">
-                {{employer.businessName}}
-              </label>
-            </div>
-            {% endif %}
-            {% endfor %}
-          </div>
-        </fieldset>
-      </div>
-      <div id="oranisation-list-1" class="govuk-form-group" style="display:none;">
-        <fieldset class="govuk-fieldset">
-          <div class="govuk-radios">
-            <div class="govuk-radios__item selection-item" data-item-id="2" aria-hidden="false">
-              <input class="govuk-radios__input" id="selected-organisation-id-2" name="selected_organisation_id" type="radio" value="Springfield Healthcare" data-search-value="Organisation 2">
-              <label class="govuk-label govuk-radios__label" for="selected-organisation-id-2">
-                Springfield Healthcare
-              </label>
-            </div>
-        </fieldset>
-      </div>
+      
 
-
-      <div id="oranisation-list-2" class="govuk-form-group" style="display:none;">
-        <fieldset class="govuk-fieldset">
-          <div class="govuk-radios">
-            <div class="govuk-radios__item selection-item" data-item-id="2" aria-hidden="false">
-              <input class="govuk-radios__input" id="selected-organisation-id-2" name="selected_organisation_id" type="radio" value="Springfield Healthcare" data-search-value="Organisation 2">
-              <label class="govuk-label govuk-radios__label" for="selected-organisation-id-2">
-                Springfield Healthcare
-              </label>
-            </div>
-            <div class="govuk-radios__item selection-item" data-item-id="2" aria-hidden="false">
-              <input class="govuk-radios__input" id="selected-organisation-id-2" name="sselected_organisation_id" type="radio" value="Hilton Worldwide" data-search-value="Organisation 2">
-              <label class="govuk-label govuk-radios__label" for="selected-organisation-id-2">
-                Hilton Worldwide
-              </label>
-            </div>
-          </div>
-        </fieldset>
-      </div>
-
-      <p id="oranisation-list-no-result" style="display:none;">0 matches for <span class="querytext"></span></p>
-
-      {% if data.employerAmount > 25 %}
-      <div class="pager das-pager" aria-hidden="false" style="margin-top:0" data-paging="">
-        <div class="pager-controls das-pager-controls">
-          <a class="pager-prev das-pager-prev hidden" href="#" aria-hidden="true" hidden="hidden">Prev</a>
-          <ul class="govuk-list pager-items das-pager-items">
-            <li data-page-number="1">1</li>
-            <li data-page-number="2"><a href="#">2</a></li>
-            <li data-page-number="3"><a href="#">3</a></li>
-            <li data-page-number="4"><a href="#">4</a></li>
-            <li data-page-number="5"><a href="#">5</a></li>
-          </ul>
-          <a class="pager-next das-pager-next" href="#" aria-hidden="false">Next</a>
+		
+          <!-- TABLE RESULTS -->
+          <table class="govuk-table govuk-!-margin-bottom-8" id="order-table-one">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Organisation</th>
+            <th scope="col" class="govuk-table__header" onclick="sortTableOne(0)"><span class="icon sort">Account name</th>
+            <th scope="col" class="govuk-table__header">Agreement ID</th>
+            <th scope="col" class="govuk-table__header"></th>
+            </tr>
+          </thead>
+          <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+            <td class="govuk-table__cell">Abbotsford Care Limited</td>
+            <td class="govuk-table__cell">Abbotsford Care Limited </td>
+            <td class="govuk-table__cell">X4JKRY</td>
+            <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">ACCOUNTANT LTD</td>
+              <td class="govuk-table__cell">ACCOUNTANT LTD</td>
+              <td class="govuk-table__cell">3W5D6J</td>
+              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">BAC LIMITED</td>
+              <td class="govuk-table__cell">BAC LIMITED</td>
+              <td class="govuk-table__cell">3W5D6J</td>
+              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">ESFA LTD</td>
+              <td class="govuk-table__cell">ESFA LTD</td>
+              <td class="govuk-table__cell">7XZ66W</td>
+              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">SAINSBURY'S</td>
+              <td class="govuk-table__cell">SAINSBURY'S </td>
+              <td class="govuk-table__cell">P4JKRY</td>
+              <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
+            </tr>
+    
+    
+            </tr>
+          </tbody>
+          </table>		
         </div>
-        <div class="das-pager-summary">Showing 1 to 25 of 87 employers</div>
       </div>
-      {% endif %}
-
-      <details class="govuk-details" data-module="govuk-details">
-        <summary class="govuk-details__summary">
-          <span class="govuk-details__summary-text">
-            The organisation I want to select is not listed
-          </span>
-        </summary>
-        <div class="govuk-details__text">
-          Your organisation is not listed because you do not have the permission to create a vacancy for them. You'll need to contact them to set this permission. 
-        </div>
-      </details>
-
-      <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>-->
-      {{ govukButton({
-        text: "Save and continue",
-        href: "task-list"
-      }) }}      
-      <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
     </form>
 
   </div>
