--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -56,6 +56,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
         </div>
       </fieldset>
       
+      <p class="govuk-body"><a href="employers-select">Clear search</a></p>
 
 		
           <!-- TABLE RESULTS -->
@@ -77,7 +78,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">ACCOUNTANT LTD</td>
-              <td class="govuk-table__cell">ACCOUNTANT LTD</td>
+              <td class="govuk-table__cell">Abbotsford Care Limited</td>
               <td class="govuk-table__cell">3W5D6J</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
