--- a/app/views/v9/traineeships/create/employers-select.html
+++ b/app/views/v9/traineeships/create/employers-select.html
@@ -17,6 +17,8 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 
     <form method="post" action="employers-select-0">
 
+
+      <!-- DETAILS LINK -->
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
@@ -28,7 +30,9 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
           You'll need to contact them to give you permission in the 'training provider permissions’ section of their Apprenticeship service account. 
         </div>
       </details>
-      
+      <!-- DETAILS LINK -->
+
+      <!-- SEARCH FIELD -->
       <fieldset class="govuk-fieldset">
         <legend class="govuk-visually-hidden">Search organisation name or account name</legend>
         <div class="govuk-form-group search-field search-field-darker">
@@ -41,22 +45,19 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 
             <div class="autocomplete__parent_wrapper">
               <div class="autocomplete__wrapper">
-                <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
-                  <span>No search results.</span>
-                  <span>,,</span>
-                </div>
                 <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
               </div>
             </div>
-            <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="">
+            <input class="govuk-text" name="searchOrgQuery" id="tt-default" value="">
           </div>
           <div class="search-submit">
-            <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
+            <button class="govuk-button" data-module="govuk-button" type="submit" id="tt-default" name="searchOrgsSubmit" value="Search Organisations">Search Organisations</button>
           </div>
         </div>
       </fieldset>
-      
+      <!-- SEARCH FIELD -->
 
+      <!-- <p class="govuk-body"><a href="employers-select">Clear search</a></p> -->
 		
           <!-- TABLE RESULTS -->
           <table class="govuk-table govuk-!-margin-bottom-8" id="order-table-one">
@@ -77,7 +78,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
             </tr>
             <tr class="govuk-table__row">
               <td class="govuk-table__cell">ACCOUNTANT LTD</td>
-              <td class="govuk-table__cell">ACCOUNTANT LTD</td>
+              <td class="govuk-table__cell">Abbotsford Care Limited</td>
               <td class="govuk-table__cell">3W5D6J</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
@@ -99,8 +100,6 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
               <td class="govuk-table__cell">P4JKRY</td>
               <td class="govuk-table__cell"><a href="employers-confirm">Select</a></td>
             </tr>
-    
-    
             </tr>
           </tbody>
           </table>		
@@ -110,4 +109,28 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 
   </div>
 </div>
+
+<script type="text/javascript" src="/public/javascripts/accessible-autocomplete.min.js"></script>
+
+<script type="text/javascript">
+  var providers = [
+    "13 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
+    "14 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
+    "15 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
+    "16 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
+    "17 Thorne House, Townsend Avenue, Coventry, CV1 1AB",
+  ]
+</script>
+
+<script type="text/javascript">
+  var element = document.querySelector('#tt-default')
+  var id = 'autocomplete-default'
+  accessibleAutocomplete({
+    element: element,
+    id: id,
+    source: providers,
+    name: "addressdata"
+  })
+</script>
+
 {% endblock %}
