--- a/app/views/v9/provider/create/employers-select.html
+++ b/app/views/v9/provider/create/employers-select.html
@@ -56,7 +56,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
         </div>
       </fieldset>
       
-      <p class="govuk-body"><a href="employers-select">Clear search</a></p>
+      <!-- <p class="govuk-body"><a href="employers-select">Clear search</a></p> -->
 
 		
           <!-- TABLE RESULTS -->
